2000-12-19 Mike Welles <mike@bangsate.com>   *** 3.5.6 release ***

	* Took out LZW Encoding from tif_lzw.c 

	* Created HOWTO-RELEASE

	* Created html/v3.5.6.html

	* updated index.html
	
2000-12-01  Frank Warmerdam  <warmerdam@pobox.com>

	* Added patches for EOFB support in tif_fax3.c and tif_fax3.h. 
	Patches supplied by Frank Cringle <fdc@cliwe.ping.de>
	Example file at: ftp://ftp.remotesensing.org/pub/libtiff/eofb_396.tif

2000-11-24  Frank Warmerdam  <warmerdam@pobox.com>

	* libtiff/Makefile.in: Added an installPrivateHdrs and install-private
	target so that the private headers required by libgeotiff can be
	installed with the others.  They are not installed by default.

	* libtiff/Makefile.in: Added @MACHLIBDEPS@ to LINUXdso and GNULDdso
	targets so libtiff.so will be built with an explicit dependency
	on libm.so.

	* libtiff/Makefile.in: Use softlinks to link libtiff.so.3 to 
	libtiff.so.3.5.5.  

	* libtiff/Makefile.in & configure: Remove all references to the ALPHA 
	file, or ALPHA version logic.  Added stuff about DIST_POINT in 
	place of DIST_TYPE and the alpha release number stuff.

2000-11-22  Frank Warmerdam  <warmerdam@pobox.com>

	* I have applied a patch from Steffen Moeller <moeller@ebi.ac.uk> to
	the configure script so that it now accepts the --prefix, and 
	--exec-prefix directives. 

2000-11-13  Frank Warmerdam  <warmerda@cs46980-c>

	* I have made a variety of modifications in an effort to ensure the 
	TIFFLIB_VERSION macro is automatically generated from the RELEASE-DATE
	file which seems to be updated regularly.  

	 o mkversion.c now reads RELEASE-DATE and emits TIFFLIB_VERSION in 
	   version include file. 
	 o renamed version.h to tiffvers.h because we now have to install it 
	   with the public libtiff include files.  
	 o include tiffvers.h in tiffio.h. 
	 o updated tif_version.c to use tiffvers.h.
	 o Updated Makefile.in accordingly.

	* As per http://bugzilla.remotesensing.org/show_bug.cgi?id=25